--- a/app/views/travel_admin/destinations/index.html.haml
+++ b/app/views/travel_admin/destinations/index.html.haml
@@ -1,22 +1,14 @@
 = content_for :breadcrumbs do
-  %ul.breadcrumb
-    %li
-      Data
-      %span.divider /
-    %li.active Destinations
+  %li.active Destinations
 
-= content_for :search_box do
-  = search_form_for @q, class: 'form-inline' do |f|
-    .col-md-4
-      .input-group
-        = f.text_field :description_title_cont, class: 'form-control', placeholder: 'Search destinations'
-        .input-group-btn
-          = search_button 
-          = link_to_new 'New Destination', 'destinations/new'
+= content_for :page_header do
+  Destinations
+  %small all destinations list here for edit.
 
 %section
   = will_paginate(@collection)
-  %table#list_destinations.data-list.table.table-bordered.table-striped
+  = link_to_new 'New Destination', new_destination_path
+  %table#list_destinations.data-list.table.table-hover.table-striped
     %thead
       %tr.table-header
         %th ID
