--- a/app/views/travel_admin/shared/_main_menu.html.haml
+++ b/app/views/travel_admin/shared/_main_menu.html.haml
@@ -1,7 +1,7 @@
 .navbar.navbar-static.navbar-inverse.navbar-fixed-top
   .container
     .navbar-header
-      = link_to 'Admin Home', cfg.get_config('admin_path'), :class => 'navbar-brand'
+      = link_to 'Admin Home', full_path(''), :class => 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li.dropdown
@@ -9,9 +9,9 @@
             Data
             %b.caret
           %ul.dropdown-menu{:role => "menu"}
-            %li= link_to t(:destinations), destinations_path
-            %li= link_to t(:tours), tours_path
-            %li= link_to t(:schedules), schedules_path
+            %li= link_to t(:destinations), full_path destinations_path
+            %li= link_to t(:tours), full_path tours_path
+            %li= link_to t(:schedules), full_path schedules_path
             %li.divider
             %li= link_to t(:vehicles), buses_path
             %li= link_to t(:pages), pages_path
