--- a/app/views/layouts/travel_admin/application.html.haml
+++ b/app/views/layouts/travel_admin/application.html.haml
@@ -48,7 +48,7 @@
       %a.btn.btn-icon.btn-circle.btn-success.btn-scroll-to-top.fade{"data-click" => "scroll-top", :href => "javascript:;"}
         %i.fa.fa-angle-up
 
-    / ================== BEGIN BASE JS ==================
+    / ================== BEGIN BASE JS ==================    
     %script{:src => "/admin/assets/plugins/jquery-1.8.2/jquery-1.8.2.min.js"}
     %script{:src => "/admin/assets/plugins/jquery-ui-1.10.4/ui/minified/jquery-ui.min.js"}
     %script{:src => "/admin/assets/plugins/bootstrap-3.2.0/js/bootstrap.min.js"}
@@ -71,6 +71,7 @@
     %script{:src => "/admin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"}
     %script{:src => "/admin/assets/js/dashboard.js"}
     %script{:src => "/admin/assets/js/apps.min.js"}
+    = cloudinary_js_config
     / ================== END PAGE LEVEL JS ==================
     :javascript
       $(document).ready(function() {
