--- a/app/views/travel_admin/photos/_form.html.haml
+++ b/app/views/travel_admin/photos/_form.html.haml
@@ -5,10 +5,11 @@
       %h4.modal-title Upload Photos
     .modal-body
       = form_for [@parent, @object], :html => { :multipart => true } do |f|
-        = f.file_field :pic
+        = cl_image_upload_tag(:pic)
         .alert
           %strong Notice:
           If you cannot upload a photo file with special character in the filename, please rename it and upload again. (It's uploader component problem. will be fixed after the uploader update later.)
+        = f.submit class: 'hidden'
     .modal-footer
       %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
       %button.btn.btn-primary{:onclick => "submit_dialog_form(this);"} Upload
