--- a/app/views/travel_admin/shared/_admin_top.html.haml
+++ b/app/views/travel_admin/shared/_admin_top.html.haml
@@ -35,7 +35,7 @@
           %li.media
             %a{:href => "javascript:;"}
               .pull-left
-                %img.media-object{:alt => "", :src => "assets/img/user-1.jpg"}/
+                %img.media-object{:alt => "", :src => "/admin/assets/img/user-1.jpg"}/
               .media-body
                 %h6.media-heading John Smith
                 %p Quisque pulvinar tellus sit amet sem scelerisque tincidunt.
@@ -43,7 +43,7 @@
           %li.media
             %a{:href => "javascript:;"}
               .pull-left
-                %img.media-object{:alt => "", :src => "assets/img/user-2.jpg"}/
+                %img.media-object{:alt => "", :src => "/admin/assets/img/user-2.jpg"}/
               .media-body
                 %h6.media-heading Olivia
                 %p Quisque pulvinar tellus sit amet sem scelerisque tincidunt.
@@ -64,7 +64,7 @@
                 .text-muted 2 hour ago
           %li.dropdown-footer.text-center
             %a{:href => "javascript:;"} View more
-      %li.dropdown.navbar-user.open
+      %li.dropdown.navbar-user
         %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "javascript:;"}
           %img{:alt => "", :src => "/admin/assets/img/user-13.jpg"}
             %span.hidden-xs Adam Schwartz
