--- a/app/views/travel_admin/shared/_description.html.haml
+++ b/app/views/travel_admin/shared/_description.html.haml
@@ -12,8 +12,8 @@
     .col-md-6
       .form-group
         = desc.label :en
-        = desc.text_area :en, :class => 'html-editor', :style => 'width:100%;'
+        = desc.text_area :en, :class => 'html-editor', rows: 10, :style => 'width:100%;'
     .col-md-6
       .form-group
         = desc.label :cn
-        = desc.text_area :cn, :class => 'html-editor', :style => 'width:100%;'
+        = desc.text_area :cn, :class => 'html-editor', rows: 10, :style => 'width:100%;'
