--- a/app/views/travel_admin/destinations/_detail.html.haml
+++ b/app/views/travel_admin/destinations/_detail.html.haml
@@ -5,10 +5,12 @@
     .col-md-6
       .well
         .small-image-left
-          = image_tag detail.title_photo.pic.url(:small) if detail.title_photo
+          = cl_image_tag(detail.title_photo.public_id, width:320, height: 180, crop: :fill) if detail.title_photo
         = raw detail.description.en
         .clear
     .col-md-6
       .well
+        .small-image-left
+          = cl_image_tag(detail.title_photo.public_id, width:320, height: 180, crop: :fill) if detail.title_photo
         = raw detail.description.cn
-      = button_link_to_edit detail
+  = button_link_to_edit detail
