--- a/app/views/travel_admin/employee_infos/_row.html.haml
+++ b/app/views/travel_admin/employee_infos/_row.html.haml
@@ -1,11 +1,11 @@
 - tt = TypeText.instance
 <tr id="#{dom_id row}" #{'class=deleted' unless row.status && row.status == 1}>
 %td= row.id
-%td= row.company_id
+%td= row.employee.login_name if row.employee
 %td= row.nickname
 %td= tt.get_texts('roles', row.roles)
-%td= row.default_telephone
-%td= row.default_email
+%td= row.telephone
+%td= row.email
 %td= row.status
 %td.actions
   .btn-group
