--- a/app/views/travel_admin/tours/spots/_form.html.haml
+++ b/app/views/travel_admin/tours/spots/_form.html.haml
@@ -1,5 +1,5 @@
 - @object.build_description if !@object.description
-.modal-dialog
+.modal-dialog.modal-lg
   .modal-content
     .modal-header
       %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
@@ -19,6 +19,7 @@
             = f.text_field :visit_order, :class => 'form-control'
         = render :partial => 'travel_admin/shared/description', :locals => {:f => f}
         = render :partial => 'travel_admin/shared/status', locals: {f: f}
+        = f.submit class: 'hidden'
     .modal-footer
-      %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
+      %button.btn{"data-dismiss" => "modal"} Close
       %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
